--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,8 @@ application/logs/*
 !application/logs/index.html
 !application/logs/.htaccess
 /vendor/
+
+.idea
+.idea/dict-ci4.iml
+composer.lock
+writable/logs/log-2024-10-16.log
